Fixed overflow bug.

--- a/views/Main.css
+++ b/views/Main.css
@@ -1,14 +1,18 @@
+html, body {
+	margin: 0;
+	padding: 0;
+}
+
 body{
-	
 	background-image: url('https://static.pexels.com/photos/125514/pexels-photo-125514.jpeg');
 	background-size: 100%;
 	background-repeat: no-repeat;
-	
-
+	box-sizing: border-box;
 }
 
 
-#headerdiv{		
+#headerdiv{
+	box-sizing: border-box;
 	height:73px;
 	width: 100%;
 	background-color: #1E1E1E;
@@ -16,9 +20,11 @@ body{
 	padding-left: 10px;
 	padding-right: 10px;
 }
-.footer{		
+.main {
+}
+
+.footer{
 	height:60px;
-	width: 100%;
 	background-color: #7F7F7F;
-	
+
 }
